<resources>
    <string name="app_name">鉴宝大师</string>
    <string name="action_settings">Settings</string>
    <string name="debug">debug</string>
    <string name="icon">icon</string>
    <string name="ok">OK</string>
    <string name="title">title</string>
    <string name="hint">hint</string>
    <string name="tit_feed">Feedback</string>
    <string name="no_comments">No comments</string>
    <string name="stupid_app">Stupid app</string>
    <string name="quite_nice">Quite nice~</string>
    <string name="take_picture_identify">拍照鉴定</string>
    <string name="detail_view">请拍摄一张细节图片</string>
    <string name="detail_desc">细节图</string>
    <string name="submit_order">提交订单</string>
    <string name="palace_museum">故宫博物院</string>
    <string name="capital_museum">首都博物馆</string>
    <string name="national_museum">国家博物馆</string>
    <string name="cultural_relics_bureau">北京文物局</string>
    <string name="association_school">学院协会</string>
    <string name="chinese_academy_of_social_sciences">社科院</string>
    <string name="deal">一槌定音</string>
    <string name="collect">天下收藏</string>
    <string name="home">首页</string>
    <string name="discovery">发现</string>
    <string name="me">我的</string>
    <string name="indicator_num">鉴定 : %1$s</string>
    <string name="fans_num">粉丝 : %1$s</string>
    <string name="appreciate_num">好评 : %1$s</string>
    <string name="order_detail">宝贝详情页</string>
    <string name="identify_type_normal">普通鉴定</string>
    <string name="identify_type_speed">极速鉴定</string>
    <string name="identify_type_video">视频鉴定</string>
    <string name="identify_type_order">预约鉴定</string>
    <string name="identify_type_expert">专家团</string>
    <string name="identify_type_fast">快速鉴定</string>
    <string name="identify_type_registration">挂号鉴定</string>
    <string name="identify_type">鉴定类型</string>
    <string name="share_to">分享到</string>
    <string name="we_chat">微信</string>
    <string name="qq">QQ</string>
    <string name="micro_blog">微博</string>
    <string name="moments">朋友圈</string>
    <string name="qq_zone">QQ空间</string>
    <string name="message">短信</string>
    <string name="collection">收藏</string>
    <string name="have_collected">已收藏</string>
    <string name="delete">删除</string>
    <string name="share_success">"分享成功"</string>
    <string name="share_fail">"分享失败"</string>
    <string name="share_cancel">"分享取消"</string>
    <string name="oauth_start">"开始授权"</string>
    <string name="oauth_success">"授权成功"</string>
    <string name="oauth_fail">"授权失败"</string>
    <string name="oauth_cancel">"授权取消"</string>
    <string name="install_sina">请安装新浪微博</string>
    <string name="no_registered_account">登录/注册</string>
    <string name="attention">关注</string>
    <string name="comment">评论</string>
    <string name="enquiry">询价</string>
    <string name="my_identity">我的鉴定</string>
    <string name="no_payment">待支付</string>
    <string name="to_identity">待鉴定</string>
    <string name="off_the_stocks">已完成</string>
    <string name="user_focus">我的关注</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_wallet_money">账户余额</string>
    <string name="check_out_my_wallet">查看我的钱包</string>
    <string name="about_us">关于我们</string>
    <string name="check_about_us">查看关于我们</string>
    <string name="identify_no_tips">"亲，你什么要求都没有提哦！"</string>
    <string name="modification">修改</string>
    <string name="payment">支付</string>
    <string name="help">帮助</string>
    <string name="cannot_connect_network">无网络连接，请检查您的网络设置..</string>
    <string name="not_login">您还未登录</string>
    <string name="scan_download">赚积分</string>
    <string name="confirm_login">是否要登录</string>
    <string name="loading_success">数据加载成功!</string>
    <string name="confirm_loading">是否要重新加载</string>
    <string name="confirm_delete_collection">确认要删除该藏品</string>
    <string name="confirm">确认</string>
    <string name="cancle">取消</string>
    <string name="delete_collection_failure">删除预约失败</string>
    <string name="delete_collection_success">删除预约成功</string>
    <string name="comment_info">请输入您的评论&#8230;</string>
    <string name="query_price">您想说什么？请在此输入……</string>
    <string name="ptr_pull_to_refresh">下拉刷新</string>
    <string name="ptr_release_to_refresh">释放刷新</string>
    <string name="ptr_loading">刷新……</string>
    <string name="ptr_last_updated">更新: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="tv_download">扫一扫即可下载</string>
    <string name="user_recharge_fialed_title">如果充值失败，请您核实以下问题：</string>
    <string name="user_recharge_failed_tip">
        1.是否网络问题\r\n\n
        2.是否开通微信支付或者百付宝支付\r\n\n
        3.所使用充值方式的支付密码是否输入错误\r\n
    </string>
    <string name="user_recharge_failed_other">如果不属于以上问题，请您：</string>
    <string name="contact_us">联系我们</string>
    <string name="user_feedback">意见反馈</string>
    <string name="user_problems">常见问题</string>
    <string name="user_identify_tip">鉴定须知</string>
    <string name="user_banlance">账户余额</string>
    <string name="user_points">我的积分</string>
    <string name="user_score">我的积分</string>
    <string name="current_score">当前积分:</string>
    <string name="score_record">积分记录</string>
    <string name="user_recharge">我要充值</string>
    <string name="user_recharge_record">充值记录</string>
    <string name="user_consume">消费明细</string>
    <string name="about_us_msg">手机鉴定是根据广大用户需求精心研发的鉴宝产品。旨在为您
        提供快捷、方便、专业的鉴定服务。
    </string>
    <string name="contact_us_wx">微信：cpjl123</string>
    <string name="contact_us_sina">新浪微博：手机鉴宝-今起文化</string>
    <string name="contact_us_qq">QQ群：145268901</string>
    <string name="contact_us_tel">电话：010&#8211;68703488</string>
    <string name="problem_time">鉴定专家服务时间</string>
    <string name="problem_time_answer">专家服务时间：9:00-21:00(不排除部分专家夜间在线)
        如您在21:00-次日9:00之间提交支付鉴定，我们将默认9:00开始鉴定计时。
    </string>
    <string name="problem_rules">藏品鉴定规则</string>
    <string name="problem_rules_answer">每次鉴定只能上传一件藏品的不同角度图片，请勿一次上传
        多件藏品图片。多件藏品图片我们默认鉴定第一件，如上传
        多图混乱造成无法鉴定鉴定费用不退还。
    </string>
    <string name="problem_outtime">鉴定超时处理</string>
    <string name="problem_outtime_answer">
        在9:00-21:00时间范围内只限充值支付，积分支付超时不退积分
    </string>
    <string name="problem_cancle">藏品图片模糊撤销处理</string>
    <string name="problem_cancle_answer">由于在线鉴定是通过图片鉴定，请您按照要求上传清晰图片。
        如图片模糊造成无法鉴定，我们将会做撤销鉴定处理。
        充值支付：退款处理
        积分支付：积分不退
    </string>
    <string name="problem_long_time_low_value">为什么藏品年代久远但价值不高？</string>
    <string name="problem_long_time_low_value_answer">藏品的价值主要由存世量、艺术价值、品相、市场行情等因
        素决定的，年代不是决定藏品价值的主导。
    </string>
    <string name="tip_type_normal">一、普通鉴定</string>
    <string name="tip_type_normal_content">
        鉴定形式：图片鉴定\n
        鉴定专家：线上专家1位\n
        客服人员：在线客服\n
        鉴定时间：支付后24小时内鉴定完毕\n
    </string>
    <string name="tip_type_jisu">二、极速鉴定</string>
    <string name="tip_type_jisu_content">
        鉴定形式：图片鉴定\r\n
        鉴定专家：线上专家1位\r\n
        客服人员：在线客服\r\n
        鉴定时间：支付后60分钟内鉴定完毕\r\n
    </string>
    <string name="tip_type_experts">三、专家团鉴定</string>
    <string name="tip_type_experts_content">
        鉴定形式：图片鉴定\r\n
        鉴定专家：线上专家3位\r\n
        客服人员：在线客服\r\n
        鉴定时间：支付后120小时内鉴定完毕\r\n
    </string>
    <string name="tip_type_video">四、挂号鉴定</string>
    <string name="tip_type_video_content">
        鉴定形式：图片鉴定\r\n
        鉴定专家：线上专家1位\r\n
        客服人员：在线客服\r\n
        鉴定时间：支付后24小时内鉴定完毕\r\n
    </string>
    <string name="tip_type_order">五、预约鉴定</string>
    <string name="tip_type_order_content">
        鉴定形式：当面鉴定\r\n
        鉴定专家：权威机构专家 可指定\r\n
        客服人员：专家助理一对一\r\n
        鉴定时间：专家当面反馈鉴定结果\r\n
    </string>
    <string name="tip_time_style">鉴定计时方式</string>
    <string name="tip_time_style_content">每日鉴定时间为9:00~21:00，故计时时间也以此为准。例：下午19点支付的普通鉴定，则超时时间为第三日下午19点。/下午19点支付的极速鉴定，超时时间为20点。
    </string>
    <string name="order_collect_state_true">取消收藏</string>
    <string name="order_collect_state_false">收藏</string>
    <string name="expert_share_title_prefix">专家分享&#8211;&#8211;</string>
    <string name="info_share_title_prefix">资讯分享&#8211;&#8211;</string>
    <string name="user_not_login">您还未登录</string>
    <string name="indented_requirement_filed">您还未填写鉴定要求</string>
    <string name="quit_accounts">确定退出账号？</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="edit_introduce">编辑资料</string>
    <string name="name_limit">不超过6个汉字或12个字符</string>
    <string name="comment_prompt">评论不能为空或空格，请重新输入</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_fail">评论失败</string>
    <string name="loading_failed">加载失败</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="indentify_modify">修改</string>
    <string name="identify_type_registion">挂号鉴定</string>
    <string name="no_related_order">您没有相关的鉴定</string>
    <string name="our_indicated">我要鉴定</string>
    <string name="zfb_recharge">支付宝充值</string>
    <string name="wx_recharge">微信充值</string>
    <string name="bfb_recharge">百付宝充值</string>
    <string name="ali_paying">正在支付..</string>
    <string name="pay_waiting">支付结果确认中</string>
    <string name="pay_cancel">支付取消</string>
    <string name="pay_failed">支付失败</string>
    <string name="pay_success">支付成功</string>
    <string name="select_recharge">请选择您要充值的金额</string>
    <string name="reset_recharge_money">金额有误，请重新设置</string>
    <string name="pay_method_zfb">支付宝支付</string>
    <string name="pay_method_bfb">百付宝支付</string>
    <string name="pay_method_wx">微信支付</string>
    <string name="pay_method_bobao">余额支付</string>
    <string name="use_score">是否使用积分</string>
    <string name="pay_amount">支付金额</string>
    <string name="user_balance">账户余额</string>
    <string name="identify_price">鉴定价格</string>
    <string name="score_introduce">积分说明</string>
    <string name="pay_order">支付订单</string>
    <string name="balance_not_enough">余额不足,请充值</string>
    <string name="get_pay_info_failed">获取支付信息失败..</string>
    <string name="submit_failed">上传失败</string>
    <string name="submit_success">上传成功</string>
    <string name="submit_loading">上传中···</string>
    <string name="input_valid_phone_number">请输入正确的电话号码</string>
    <string name="submit_quit">确定退出吗？</string>
    <string name="order_no_save">退出后信息不保存</string>
    <string name="modify_order_info">修改订单</string>
    <string name="user_pay_quit">取消支付订单</string>
    <string name="modify_order">修改信息不保存</string>
    <string name="please_pay">请支付</string>
    <string name="pay_to">立即支付</string>
    <string name="confirm_cancel">确认取消</string>
    <string name="login_password">密码：</string>
    <string name="user_login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="user_account">账号：</string>
    <string name="input_user_number">请输入您的手机号</string>
    <string name="input_user_password">请填写6&#8211;10位英文或数字</string>
    <string name="third_login">使用第三方账号登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="wx_login">微信登录</string>
    <string name="sina_login">新浪登陆</string>
    <string name="already_evaluate_to_expert">已评价</string>
    <string name="pay_success_note">恭喜您！支付成功！</string>
    <string name="pay_success_note2">鉴定专家已准备好迎接您的宝贝!</string>
    <string name="pay_success_note3">您本次支付获得5鉴定积分!</string>
    <string name="continue_identify">继续鉴定</string>
    <string name="invite_friend_for_points">邀请好友赚积分</string>
    <string name="network_not_connected">亲，当前网络无连接哦！</string>
    <string name="try_again">再试一次</string>
    <string name="configure_network">设置网络</string>
    <string name="opinion_of_user">你觉得鉴宝大师怎么样?</string>
    <string name="opinion_good">非常不错，好评</string>
    <string name="opinion_bad">不好用，吐槽</string>
    <string name="opinion_cancel">再用用看</string>
</resources>