<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="14dp"
            android:text="@string/app_name"
            android:textColor="@color/black1"
            android:textSize="@dimen/ts_normal_bigger"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_content_corner"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/contact_us_wx"
            android:textColor="@color/black1"
            android:textSize="@dimen/ts_normal_one"/>

        <View style="@style/line_fill_white_style"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/contact_us_sina"
            android:textColor="@color/black1"
            android:textSize="@dimen/ts_normal_one"/>

        <View style="@style/line_fill_white_style"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/contact_us_qq"
            android:textColor="@color/black1"
            android:textSize="@dimen/ts_normal_one"/>

        <View style="@style/line_fill_white_style"/>

        <TextView
            android:id="@+id/tv_contact_us_tel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/contact_us_tel"
            android:textColor="@color/black1"
            android:textSize="@dimen/ts_normal_one"/>
    </LinearLayout>
</LinearLayout>