<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="335dp"
              android:layout_height="match_parent"
              android:background="@drawable/bg_content_corner_transparent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:background="@drawable/bg_rate">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/opinion_of_user"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_normal_bigger"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_delete"
        android:background="@drawable/bg_content_corner_bottom_10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_good"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/opinion_good"
            android:textColor="@color/orange_yellow"
            android:textSize="@dimen/ts_normal_big"/>

        <View style="@style/line_fill_gray9_style"/>

        <TextView
            android:id="@+id/tv_bad"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/opinion_bad"
            android:textColor="@color/black2"
            android:textSize="@dimen/ts_normal_big"/>

        <View style="@style/line_fill_gray9_style"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/opinion_cancel"
            android:textColor="@color/black2"
            android:textSize="@dimen/ts_normal_big"/>
    </LinearLayout>
</LinearLayout>
