<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="290dp"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_dialog_white"
              android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/already_evaluate_to_expert"
        android:textColor="@color/black1"
        android:textSize="@dimen/ts_normal_forth"/>

    <TextView
        android:id="@+id/dialog_tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/black2"
        android:textSize="@dimen/ts_normal_one"/>

    <View style="@style/line_fill_gray9_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:showDividers="middle">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/negative"
            android:textColor="@color/black3"
            android:textSize="@dimen/ts_normal_forth"/>

        <View style="@style/line_vertical_gray9_style"/>

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm_cancel"
            android:textColor="@color/blue7"
            android:textSize="@dimen/ts_normal_forth"/>
    </LinearLayout>
</LinearLayout>