<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_content_corner"
              android:gravity="center"
              android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/network_unconnected_icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/network_not_connected"
        android:textColor="@color/black2"
        android:textSize="@dimen/ts_normal_one"/>

    <TextView
        android:id="@+id/tv_configure_network"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30.5dp"
        android:layout_marginRight="30.5dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_edit_text_corner"
        android:gravity="center"
        android:text="@string/configure_network"
        android:textColor="@color/black2"
        android:textSize="@dimen/ts_normal"/>

    <TextView
        android:id="@+id/tv_try_again"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="30.5dp"
        android:layout_marginRight="30.5dp"
        android:background="@drawable/bg_dialog_title"
        android:gravity="center"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_normal"/>
</LinearLayout>